plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/bottom-mpp/src/iosSimLibMain/kotlin/transitiveStory/midActual/sourceCalls/intemediateCall/BottomActualMPPInheritor.kt
package transitiveStory.midActual.sourceCalls.intemediateCall

import transitiveStory.bottomActual.mppBeginning.BottomActualDeclarations

actual class <!LINE_MARKER("descr='Has expects in multimod-hmpp.bottom-mpp.jvmWithJavaiOSMain module'")!>BottomActualMPPInheritor<!> : BottomActualDeclarations()
